--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ jupyterlab==2.2.9
 jupyterlab-pygments==0.1.2
 jupyterlab-server==1.2.0
 Keras-Preprocessing==1.1.2
+llvmlite==0.35.0
 Markdown==3.3.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
@@ -53,6 +54,7 @@ nbformat==5.0.8
 nest-asyncio==1.4.3
 networkx==2.5
 notebook==6.1.5
+numba==0.52.0
 numpy==1.19.4
 oauthlib==3.1.0
 opt-einsum==3.3.0
@@ -103,6 +105,121 @@ tornado==6.1
 traitlets==5.0.5
 typed-ast==1.4.1
 typing-extensions==3.7.4.3
+umap-learn==0.4.6
+urllib3==1.26.2
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==1.0.1
+wrapt==1.12.1
+yarg==0.1.9
+bsl-py==0.11.0
+appdirs==1.4.4
+argon2-cffi==20.1.0
+astunparse==1.6.3
+async-generator==1.10
+attrs==20.3.0
+backcall==0.2.0
+bleach==3.2.1
+cachetools==4.2.0
+certifi==2020.12.5
+cffi==1.14.4
+chardet==4.0.0
+click==7.1.2
+decorator==4.4.2
+defusedxml==0.6.0
+docopt==0.6.2
+entrypoints==0.3
+flake8==3.8.4
+Flask==1.1.2
+flatbuffers==1.12
+gast==0.3.3
+google-auth==1.24.0
+google-auth-oauthlib==0.4.2
+google-pasta==0.2.0
+greenlet==0.4.17
+grpcio==1.32.0
+h5py==2.10.0
+idna==2.10
+ipykernel==5.4.2
+ipython==7.19.0
+ipython-genutils==0.2.0
+itsdangerous==1.1.0
+jedi==0.17.2
+Jinja2==2.11.2
+joblib==1.0.0
+json5==0.9.5
+jsonschema==3.2.0
+jupyter-client==6.1.7
+jupyter-core==4.7.0
+jupyterlab==2.2.9
+jupyterlab-pygments==0.1.2
+jupyterlab-server==1.2.0
+Keras-Preprocessing==1.1.2
+llvmlite==0.35.0
+Markdown==3.3.3
+MarkupSafe==1.1.1
+mccabe==0.6.1
+mistune==0.8.4
+msgpack==1.0.2
+mypy-extensions==0.4.3
+nbclient==0.5.1
+nbconvert==6.0.7
+nbformat==5.0.8
+nest-asyncio==1.4.3
+networkx==2.5
+notebook==6.1.5
+numba==0.52.0
+numpy==1.19.4
+oauthlib==3.1.0
+opt-einsum==3.3.0
+packaging==20.8
+pandas==1.1.5
+pandocfilters==1.4.3
+parso==0.7.1
+pathspec==0.8.1
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==8.0.1
+pipreqs==0.4.10
+prometheus-client==0.9.0
+prompt-toolkit==3.0.8
+protobuf==3.14.0
+ptyprocess==0.6.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.6.0
+pycparser==2.20
+pyflakes==2.2.0
+Pygments==2.7.3
+pynvim==0.4.2
+pyparsing==2.4.7
+pyrsistent==0.17.3
+python-dateutil==2.8.1
+pytz==2020.4
+pyzmq==20.0.0
+regex==2020.11.13
+requests==2.25.1
+requests-oauthlib==1.3.0
+rsa==4.6
+scikit-learn==0.23.2
+scipy==1.5.4
+Send2Trash==1.5.0
+six==1.15.0
+sklearn==0.0
+tensorboard==2.4.0
+tensorboard-plugin-wit==1.7.0
+tensorflow==2.4.0
+tensorflow-estimator==2.4.0
+termcolor==1.1.0
+terminado==0.9.1
+testpath==0.4.4
+threadpoolctl==2.1.0
+toml==0.10.2
+tornado==6.1
+traitlets==5.0.5
+typed-ast==1.4.1
+typing-extensions==3.7.4.3
+umap-learn==0.4.6
 urllib3==1.26.2
 wcwidth==0.2.5
 webencodings==0.5.1
